--- a/starter/src/App.css
+++ b/starter/src/App.css
@@ -51,18 +51,19 @@ body,
   right: 25px;
   bottom: 25px;
 }
-.open-search a {
+.open-search button {
   display: block;
   width: 50px;
   height: 50px;
   border-radius: 50%;
   background: #2e7d32;
-  background-image: url("./icons/add.svg");
+  background-image: url('./icons/add.svg');
   background-repeat: no-repeat;
   background-position: center;
   background-size: 28px;
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
   font-size: 0;
+  border: none;
 }
 
 /* search page */
@@ -94,12 +95,13 @@ body,
   left: 15px;
   width: 50px;
   height: 53px;
-  background: white;
-  background-image: url("./icons/arrow-back.svg");
+  background: #cccccc81;
+  background-image: url('./icons/arrow-back.svg');
   background-position: center;
   background-repeat: no-repeat;
   background-size: 28px;
   font-size: 0;
+  border: none;
 }
 
 .search-books-results {
@@ -151,7 +153,7 @@ body,
   height: 40px;
   border-radius: 50%;
   background: #60ac5d;
-  background-image: url("./icons/arrow-drop-down.svg");
+  background-image: url('./icons/arrow-drop-down.svg');
   background-repeat: no-repeat;
   background-position: center;
   background-size: 20px;
