--- a/starter/src/styles/App.css
+++ b/starter/src/styles/App.css
@@ -177,3 +177,38 @@ body,
   text-align: center;
   font-size: 0.8em;
 }
+
+/* 404 Error */
+.page_404 {
+  padding: 0;
+  background: #fff;
+  font-family: 'Arvo', serif;
+  text-align: center;
+}
+
+.content_box_404 {
+  text-align: center;
+}
+
+.content_box_404 h2,
+.content_box_404 h3 {
+  font-size: 1.8rem;
+  margin-top: -3px;
+}
+
+.content_box_404 p {
+  margin-top: -30px;
+}
+
+.content_box_404 a {
+  color: #fff !important;
+  padding: 5px 20px;
+  background: #39ac31;
+  display: inline-block;
+  text-decoration: none;
+  border-radius: 8px;
+  -webkit-border-radius: 8px;
+  -moz-border-radius: 8px;
+  -ms-border-radius: 8px;
+  -o-border-radius: 8px;
+}
